Bandcamp search query handler factory: inline variable